[package]
name = "launcher-prototype"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
eframe = { version = "0.32.0", features = ["persistence"] }
egui = "0.32.0"
egui_extras = "0.32.0"
poll-promise = "0.3.0"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
rfd = "0.15.4"
serde_json = "1.0.140"
